--- a/frontend/IcareWeb/index.html
+++ b/frontend/IcareWeb/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
 </head>
 
 <body>
@@ -18,6 +19,7 @@
   </div>
 
   <script type="module" src="/src/main.js"></script>
+  
 </body>
 
 </html>
