--- a/frontend/IcareWeb/index.html
+++ b/frontend/IcareWeb/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <!-- <link rel="icon" href="/favicon.ico"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <title>ICare Medicals</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
 </head>
 
 <body>
-  
+
   <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
     data-sidebar-position="fixed" data-header-position="fixed">
 
@@ -19,7 +19,7 @@
   </div>
 
   <script type="module" src="/src/main.js"></script>
-  
+
 </body>
 
 </html>
